# metroidvania

./: CMakeLists.txt  vcpkg.json
assets/: quad.frag  quad.vert  sprite.frag  sprite.vert  text.frag  text.vert  tilemap.tmx  tiles.tsx
assets/shaders/: iquad.frag  iquad.vert  quad.frag  quad.vert  sprite.frag  sprite.vert
include/: global.h  pch.h
include/_graphics/: _gl.h  _glsl.h  _quad.h  _tex.h  _win.h
include/engine/: animation.h  global.h  index_buffer.h  io.h  mesh.h  physics.h  quad.h  render.h  render_internal.h  shader.h  text.h  texture.h  time.h  types.h  util.h  vector.h  vertex.h  vertex_array.h  vertex_buffer.h  window.h
include/engine/gfx/: mesh.h  render.h  shader.h
include/engine/graphics/: quad.h  render.h  renderer.h  shader.h  sprite.h  texture.h  vertex.h  window.h
include/engine/model/: camera.h  global.h  input.h  layer.h  sprite_batch.h  sprite_map.h  tilemap.h  time.h
include/engine/util/: io.h
include/glad/: glad.h
include/graphics/: gl.h  glsl.h  index_buffer.h  iquad.h  quad.h  shader.h  tex.h  text.h  texture.h  vertex_array.h  vertex_buffer.h  win.h  window.h
include/model/: animated_sprite.h  object.h  physics.h  player.h  quad_batch.h  sprite.h  static_sprite.h  world.h
include/shapes/: quad.h  sprite.h  text.h
include/util/: aabb.h  animation.h  global.h  io.h
lib/: libfreetype.6.20.4.dylib  libfreetype.6.dylib  libglfw.3.5.dylib  libglfw.3.dylib
src/: global.c  io.c  main.c
src/_graphics/: _gl.c  _glsl.c  _quad.c  _tex.c  _win.c
src/dep/: glad.c
src/engine/: animation.c  global.c  io.c  physics.c  quad.c  render.c  render_internal.c  shader.c  text.c  texture.c  time.c  vector.c  vertex.c  window.c
src/engine/gfx/: mesh.c  render.c  shader.c  texture.c
src/graphics/: gl.c  glsl.c  index_buffer.c  iquad.c  quad.c  shader.c  tex.c  text.c  texture.c  vertex_array.c  vertex_buffer.c  win.c  window.c
src/model/: animated_sprite.c  object.c  player.c  quad_batch.c  sprite.c  static_sprite.c
src/shapes/: quad.c  text.c
src/util/: aabb.c  animation.c  global.c  io.c  time.c
(+15 files in other folders)
